manifests/spring-deploymeny.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-app
  template:
    metadata:
      labels:
        app: spring-app
    spec:
      containers:
        - name: spring-app
          image: yusung1017/spring-server:1.0
          imagePullPolicy: IfNotPresent  # ← 변경됨
          ports:
            - containerPort: 8080
