manifests/spring-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-app-service
  namespace: default
spec:
  selector:
    app: spring-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30000
  type: NodePort
